# Sovereign_Watch

./: .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  ADBS_JITTER_ANALYSIS.md  AGENTS.md  AGENT_PROMPT.md  CHANGELOG.md  CLAUDE.md  GEOSPATIAL_SUMMARY.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_FUTURE.md  build_log_2.txt  compose.dev.yml  docker-compose.yml  lint.json  package-lock.json  patch_filters.sh  patch_health.py  patch_test.py  test_cutoff.py  test_firms_parse.py
.agent/: ARCHITECTURE.md  GEMINI.md
.claude/: settings.json
.jules/: bolt.md  palette.md  sentinel.md
Documentation/: AI_Configuration.md  API_Reference.md  Analyst_Layer.md  Configuration.md  Deployment.md  Development.md  INTEL_Globe_Mode.md  Phase2_Frontend_Gap_Analysis.md  README.md  Regional_Risk_Analysis.md  Regional_Risk_User_Testing.md  TAK_Clausalizer.md  UI_Guide.md
agent_docs/: Backend_Frontend_Coverage_Gaps.md  COMPLETED_ARCHIVE.md  DEPENDENCY_CHANGES.md  GEOSPATIAL_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  README.md  UNIFIED_ROADMAP.md  celestrak-info.md  improvements-backlog.md  (+6 more)
backend/ingestion/gdelt_pulse/: Dockerfile  main.py  pyproject.toml  service.py
backend/ingestion/gdelt_pulse/tests/: test_gdelt.py
backend/ingestion/tak_clausalizer/: Dockerfile  __init__.py  clause_emitter.py  delta_engine.py  main.py  pyproject.toml  service.py  state_change_evaluator.py  utils.py
backend/ingestion/tak_clausalizer/tests/: __init__.py  test_clause_emitter.py  test_delta_engine.py  test_escalation_detector.py  test_state_change_evaluator.py
(+806 files in other folders)
