[project]
name = "sovereign-watch-gdelt-pulse"
version = "0.1.0"
description = "Sovereign Watch GDELT OSINT ingestion poller"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "aiolimiter==1.2.1",
    "tenacity==9.1.4",
    "redis==7.3.0",
    "aiokafka==0.13.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]
