[project]
name = "sovereign-watch-tak-clausalizer"
version = "0.1.0"
description = "Sovereign Watch TAK Clausalizer microservice"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "h3==4.4.2",
    "redis==7.3.0",
    "aiokafka==0.13.0",
    "asyncpg==0.30.0",
    "uvloop==0.22.1 ; sys_platform != 'win32'",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "fakeredis==2.34.1",
]
